--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://ik.imagekit.io/sharewallet/Group%2076.png?updatedAt=1749897228344" type="image/x-icon">
     <title>Sha₹e.Wallet</title>
   </head>
   <body>
